<resources>
    <string name="app_name">OverLevel9000</string>

    <!-- EDIT TEXTS -->
    <string name="edit_text_email">Email Address</string>
    <string name="edit_text_first_name">First Name</string>
    <string name="edit_text_last_name">Last Name</string>

    <string name="submit_text">Submit</string>
    <string name="submit_description">Please enter your credentials in the fields below</string>
</resources>
